--- a/app/src/main/res/layout/view_holder_movie.xml
+++ b/app/src/main/res/layout/view_holder_movie.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
+    android:layout_marginBottom="4dp"
     android:background="@color/colorBackgroud">
 
     <View
@@ -23,6 +23,7 @@
         android:layout_marginStart="2dp"
         android:layout_marginTop="3dp"
         android:layout_marginEnd="2dp"
+        android:foreground="@drawable/mask"
         android:layout_marginBottom="48dp"
         android:contentDescription="@string/todo"
         app:layout_constraintBottom_toBottomOf="@id/fmlBackGroundMovie"
