--- a/app/src/main/res/layout/view_pager_tab.xml
+++ b/app/src/main/res/layout/view_pager_tab.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_constraintEnd_toEndOf="parent"
@@ -16,17 +17,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="12dp">
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/fmlRecyclerViewMovies"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp">
+            android:layout_marginStart="4dp"
+            tools:ignore="MissingConstraints">
 
         </androidx.recyclerview.widget.RecyclerView>
-    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
