--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,4 +3,10 @@
     <array name="preloadedFonts" translatable="false">
         <item>@font/roboto_condensed_light</item>
     </array>
+    <array>
+        <item>@font/roboto_thin</item>
+    </array>
+    <array>
+        <item>@font/roboto_black</item>
+    </array>
 </resources>
