--- a/app/src/main/res/layout/view_holder_movie.xml
+++ b/app/src/main/res/layout/view_holder_movie.xml
@@ -24,6 +24,7 @@
         android:layout_marginTop="3dp"
         android:layout_marginEnd="2dp"
         android:foreground="@drawable/mask"
+        tools:src="@drawable/avengers_end_game"
         android:layout_marginBottom="48dp"
         android:contentDescription="@string/todo"
         app:layout_constraintBottom_toBottomOf="@id/fmlBackGroundMovie"
