--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/fmdConstraintLayout"
+    android:transitionGroup="true"
+    android:transitionName="@string/fmdСonstraintlayoutTransitionName"
     android:background="@color/colorBackgroud">
 
     <ScrollView
