--- a/app/src/main/res/layout/view_holder_movie.xml
+++ b/app/src/main/res/layout/view_holder_movie.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
+    android:id="@+id/fmlConstraintLayout"
+    android:transitionName="@string/constraintlayoutTransitionName"
     android:layout_height="wrap_content"
     android:layout_marginBottom="4dp"
     >
